<resources>
    <string name="app_name">"Mix-IT 2013"</string>
    <string name="permission_write">"Modify Mix-IT schedule data"</string>
    <string name="functionnality_need_connectivity">"This functionnality need a connection"</string>
    <string name="my_planning_tab">"My Planning"</string>
    <string name="explore_tab">"Explore"</string>
    <string name="first_initialization">"Please wait during this first initialization of the Mix-IT application"</string>
    <string name="first_initialization_error">"An error occurred while doing the first initialization of the app.\nTouch here to retry."</string>
    <string name="action_bar_import_starred_session">"Import Starred Session"</string>
    <string name="warning_import_starred_session_not_sync_with_site">"As there is no possibility to login with an API into Mix-IT, currently, you can only import your starred sessions into the application by choosing your name.\nNote that this import will not override your current starred sessions from within the app, it will only add those from the website."</string>
    <string name="pick_your_name">"Pick your name"</string>
    <string name="import_starred_state_success">"Your starred sessions have been imported successfully"</string>
    <string name="import_starred_state_error">"An error occurred while importing your starred sessions"</string>
    <string name="first_day">"Thursday"</string>
    <string name="second_day">"Friday"</string>
    <string name="planning_duplicate_session_title">"On %1$s, from %2$s to %3$s"</string>
    <string name="planning_slot_pager_header">"From %1$s to %2$s"</string>
    <string name="planning_slot_pager_header_default">"From 9am to 7pm"</string>
    <string name="planning_breakfast">"Welcome &amp; Breakfast"</string>
    <string name="planning_welcome">"Staff welcome speech"</string>
    <string name="planning_talks_presentation">"Pitch of the sessions of the day by their speaker"</string>
    <string name="planning_lunch">"Lunch"</string>
    <string name="planning_break">"Break"</string>
    <string name="planning_lightning_talk">"Lightning Talks"</string>
    <string name="planning_keynote">"Keynote"</string>
    <string name="planning_multiple_session">"Multiple session selected"</string>
    <string name="planning_multiple_room">"multiple room"</string>
    <string name="planning_no_session">"No session selected"</string>
    <string name="planning_no_room">"No room"</string>
    <string name="planning_lightning_room">"Gosling"</string>
    <string name="planning_every_room">"Every room"</string>
    <string name="empty_my_planning">"You can import your planning from the server by touching here"</string>
    <string name="map_bt">"Map"</string>
    <string name="planning_bt">"Planning"</string>
    <string name="sessions_bt">"Sessions"</string>
    <string name="speakers_bt">"Speakers"</string>
    <string name="all_sessions">"Sessions"</string>
    <string name="all_lightning_talks">"Lightning Talks"</string>
    <string name="empty_sessions">"No Session"</string>
    <string name="star_session_button">"Star Session"</string>
    <string name="session_summary">"Summary"</string>
    <string name="session_speakers">"Speakers"</string>
    <string name="session_comments">"Comments"</string>
    <string name="session_in_parallel">"In Parallels"</string>
    <string name="session_activities">"Activities"</string>
    <string name="session_interests">"Interests"</string>
    <string name="no_session_summary">"No summary for this sessions"</string>
    <string name="no_session_speakers">"No speaker for this session"</string>
    <string name="action_bar_share_with">"Share with..."</string>
    <string name="share_session_subject">"Discover this talk at Mix-IT"</string>
    <string name="share_session_text">"Discover the talk \"%1$s\" at Mix-IT : %2$s"</string>
    <string name="action_bar_vote_add">"+1"</string>
    <string name="action_bar_vote_delete">"-1"</string>
    <string name="action_bar_favorite_add">"Add to favorite"</string>
    <string name="action_bar_favorite_delete">"Remove from favorite"</string>
    <string name="error_vote_lightning_talk">"Error while sending your vote/unvote request"</string>
    <string name="error_star_session">"Error while sending your star/unstar request"</string>
    <string name="no_session">"No session selected"</string>
    <string name="sessions_empty_speakers">"No speakers for this session"</string>
    <string name="sessions_empty_interests">"No interests for this session"</string>
    <string name="session_day_time">"On %1$s, from %2$s to %3$s"</string>
    <string name="session_day_time_room">"On %1$s, from %2$s to %3$s, in room %4$s"</string>
    <string name="session_time">"From %1$s to %2$s"</string>
    <string name="session_time_room">"From %1$s to %2$s, in room %3$s"</string>
    <string name="session_day_time_room_full">"On Thursday 25th and Friday 26th, in room %1$s"</string>
    <string name="warning_star_session_not_sync_with_site">"Your starred sessions will not be synchronized with the website"</string>
    <string name="star_session_success">"The session \"%1$s\" was successfully starred"</string>
    <string name="unstar_session_success">"The session \"%1$s\" was successfully unstarred"</string>
    <string name="star_session_failed">"The session \"%1$s\" was not successfully starred"</string>
    <string name="unstar_session_failed">"The session \"%1$s\" was not successfully unstarred"</string>
    <string name="talk_detail_title">"Talk"</string>
    <string name="lightning_detail_title">"Lightning Talk"</string>
    <string name="workshop_detail_title">"Workshop"</string>
    <string name="keynote_detail_title">"Keynote"</string>
    <string name="sponsors_company_member_detail">"%1$s
Sponsor %2$s"</string>
    <string name="staff_company_member_detail">"%1$s
Staff member"</string>
    <string name="members_links">"%1$s's links"</string>
    <string name="members_linkers">"%1$s's linkers"</string>
    <string name="sponsors">"Sponsors"</string>
    <string name="all_staff">"Staff"</string>
    <string name="all_members">"Members"</string>
    <string name="all_speakers">"Speakers"</string>
    <string name="no_member">"No member selected"</string>
    <string name="member_detail_title">"Member"</string>
    <string name="speaker_detail_title">"Speaker"</string>
    <string name="sponsor_detail_title">"Sponsor"</string>
    <string name="staff_detail_title">"Staff"</string>
    <string name="empty_members">"No members"</string>
    <string name="nb_consult">"%d view(s)"</string>
    <string name="member_bio">"Biography"</string>
    <string name="member_shared_links">"Shared Links"</string>
    <string name="member_talks">"Talks"</string>
    <string name="member_interests">"Interests"</string>
    <string name="member_nb_links">"%d link(s)"</string>
    <string name="member_nb_linkers">"%d linker(s)"</string>
    <string name="member_picture">"Member's picture"</string>
    <string name="member_bio_empty">"No Biography"</string>
    <string name="member_empty_interests">"No Interests for this Member"</string>
    <string name="action_bar_map">"Map"</string>
    <string name="map_title">"Comment accéder au site ?"</string>
    <string name="access_title">"Lieu :"</string>
    <string name="access_content">"SUPINFO LYON
Les Jardins d\'Osaka
16 Rue Jean Desparmet
69008 LYON

Nous vous convions à privilégier les transports en commun, les vélos ou la marche pour venir à la conférence. C'est plus écologique et sachez aussi que les places de parking aux alentours de SUPINFO ne sont pas nombreuses !"</string>
    <string name="mixit_map_url">http://www.mix-it.fr/infos/acces</string>
    <string name="sponsors_access">"Sponsors"</string>
    <string name="action_bar_about">"About"</string>
    <string name="about_text">"Source code created for the Mix-IT Conference by:
	Mathieu Calba - mathieu.calba@gmail.com

Source code available at https://github.com/MathieuCalba/mix-it-android

Version %1$s
        
Some useful libraries have been used to create this application:

	- ActionBarSherlock - http://actionbarsherlock.com
	License :
%2$s

	- Universal Image Loader - https://github.com/nostra13/Android-Universal-Image-Loader
	License :
%3$s

	- View Pager Indicator - http://viewpagerindicator.com/
	License :
%4$s

	- Crouton - https://github.com/keyboardsurfer/Crouton
	License :
%5$s"</string>
    <string name="license_action_bar_sherlock">"		Copyright 2012 Jake Wharton
		
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at
		
		    http://www.apache.org/licenses/LICENSE-2.0
		
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License."</string>
    <string name="license_universal_image_loader">"		Copyright 2011-2013 Sergey Tarasevich
		
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at
		
		    http://www.apache.org/licenses/LICENSE-2.0
		
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License."</string>
    <string name="license_view_pager_indicator">"		Copyright 2012 Jake Wharton
		Copyright 2011 Patrik Åkerfeldt
		Copyright 2011 Francisco Figueiredo Jr.
		
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at
		
		    http://www.apache.org/licenses/LICENSE-2.0
		
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License."</string>
    <string name="license_crouton">"		Copyright 2012 - 2013 Benjamin Weiss
		Copyright 2012 Neofonie Mobile GmbH
		
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at
		
			http://www.apache.org/licenses/LICENSE-2.0
		 
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License."</string>
</resources>