<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011-2013 Mathieu Calba

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/session_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/outside_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/outside_margin"
    android:paddingTop="@dimen/outside_margin" >

    <fr.mixit.android.ui.widgets.UnderlinedTextView
        android:id="@+id/session_summary_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_summary"
        android:textColor="@color/dark_blue_mixit"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/session_summary_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textIsSelectable="false" />

    <fr.mixit.android.ui.widgets.UnderlinedTextView
        android:id="@+id/session_speakers_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/session_speakers"
        android:textColor="@color/dark_blue_mixit"
        android:textIsSelectable="false" />

    <LinearLayout
        android:id="@+id/session_speakers_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <fr.mixit.android.ui.widgets.UnderlinedTextView
        android:id="@+id/session_interests_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/session_interests"
        android:textColor="@color/dark_blue_mixit"
        android:textIsSelectable="false" />

    <LinearLayout
        android:id="@+id/session_interests_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>